# KakaKV

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/client/: Client.h  ClientSetLeaderCommand.h  Command.h  CommandContext.h  ServerRouter.h
include/cluster/: GroupMember.h  NodeEndpoint.h  NodeGroup.h  NodeId.h  ReplicatingState.h
include/log/: GeneralLogEntry.h  LogComponent.h  LogEntry.h  LogEntrySequence.h  MemoryLogComponent.h  MemoryLogEntrySequence.h  NoOpLogEntry.h
include/message/: AppendEntries.h  AppendEntriesResponse.h  Message.h  RequestVote.h  RequestVoteResponse.h
include/net/: ASIOChannel.h  ASIOCodec.h  ASIOConnector.h  ASIODecoder.h  ASIOEncoder.h  AbstractHandler.h  Channel.h  Connector.h  Decoder.h  Encoder.h  Endpoint.h  FromRemoteHandler.h  InboundChannelGroup.h  Message.h  OutboundChannelGroup.h  Selector.h  ToRemoteHandler.h
include/role/: Candidate.h  Follower.h  Leader.h  Role.h
include/server/: AbstractSingleThreadStateMachine.h  MemoryNodeStore.h  Node.h  NodeBuilder.h  NodeContext.h  NodeStore.h  RaftMessageHandler.h  Scheduler.h  StateMachine.h  StateMachineContext.h
include/task/: ASIOIOService.h  ASIOScheduler.h  ElectionTimeout.h  IOServce.h  IOService.h  LogReplicationTask.h  Scheduler.h  TaskExecutor.h
include/vote/: ElectionTimeout.h
src/client/: Client.cpp  ClientSetLeaderCommand.cpp  Command.cpp  CommandContext.cpp  ServerRouter.cpp  main.cpp
src/cluster/: GroupMember.cpp  NodeEndpoint.cpp  NodeGroup.cpp  NodeId.cpp  ReplicatingState.cpp
src/log/: GeneralLogEntry.cpp  LogComponent.cpp  LogEntry.cpp  LogEntrySequence.cpp  MemoryLogComponent.cpp  MemoryLogEntrySequence.cpp  NoOpLogEntry.cpp
src/message/: AppendEntries.cpp  AppendEntriesResponse.cpp  Message.cpp  RequestVote.cpp  RequestVoteResponse.cpp
src/net/: ASIOChannel.cpp  ASIOCodec.cpp  ASIOConnector.cpp  ASIODecoder.cpp  ASIOEncoder.cpp  AbstractHandler.cpp  Channel.cpp  Connector.cpp  Decoder.cpp  Encoder.cpp  Endpoint.cpp  FromRemoteHandler.cpp  InboundChannelGroup.cpp  Message.cpp  OutboundChannelGroup.cpp  Selector.cpp  ToRemoteHandler.cpp
src/role/: Candidate.cpp  Follower.cpp  Leader.cpp  Role.cpp
src/server/: AbstractSingleThreadStateMachine.cpp  MemoryNodeStore.cpp  Node.cpp  NodeBuilder.cpp  NodeContext.cpp  NodeStore.cpp  RaftMessageHandler.cpp  Scheduler.cpp  (+1 more)
(+65 files in other folders)
